add:method with no input

--- a/kebunsafari/src/main/resources/templates/delete-kebun-safari.html
+++ b/kebunsafari/src/main/resources/templates/delete-kebun-safari.html
@@ -6,7 +6,7 @@
 <body>
     <div class="container">
         <div th:if = "${kebunSafari != null}">
-            <h2>Detail Kebun Safari Berhasil Diubah</h2>
+            <h2>Detail Kebun Safari Berhasil Dihapus</h2>
         </div>
         <div th:unless="${kebunSafari != null}">
             <h3 th:text = "${msg}"></h3>
