--- a/emsidi/src/main/resources/templates/delete-cabang.html
+++ b/emsidi/src/main/resources/templates/delete-cabang.html
@@ -11,12 +11,13 @@
         <div class="card-body">
             <div class="justify-content-center">
                 <div th:if = "${noCabang != null}">
-                <h2 th:text="'Cabang dengan nomor ' + ${noCabang} + ' dari cabang ' + ${noCabang} + ' berhasil dihapus '"></h2>
+                
+                <h2 th:text="'Cabang tidak berhasil dihapus '"></h2>
                 </div>
                 <div th:unless = "${noCabang != null}">
-                    <h2 th:text="'Cabang tidak berhasil dihapus '"></h2>
+                    <h2 th:text="'Cabang berhasil dihapus '"></h2>
                 </div>
-                <a class="btn btn-primary" th:href="/cabang/viewall">Kembali</a>
+                <a class="btn btn-primary" th:href="@{/cabang/viewall}">Kembali</a>
             </div>
         </div>
     </div>
