--- a/emsidi/src/main/resources/templates/delete-pegawai.html
+++ b/emsidi/src/main/resources/templates/delete-pegawai.html
@@ -10,8 +10,14 @@
     <div class="card m-4 p-4">
         <div class="card-body">
             <div class="justify-content-center">
-                <h2 th:text="'Pegawai dengan nomor ' + ${noPegawai} + ' dari cabang ' + ${noCabang} + ' berhasil dihapus '"></h2>
-                <a class="btn btn-primary" th:href="@{/cabang/view(noCabang=${noCabang})}">Kembali</a>
+                <div th:if = "${pegawai != null}">
+                    <h2 th:text="'Pegawai dengan nomor ' + ${pegawai.noPegawai} + ' dari cabang ' + ${pegawai.cabang.noCabang} + ' tidak berhasil dihapus '"></h2>
+                </div>
+                <div th:unless = "${pegawai != null}">
+                    <h2 th:text="'Pegawai berhasil dihapus'"></h2>
+                </div>
+                
+                <a class="btn btn-primary" th:href="@{/cabang/viewall}">Kembali</a>
             </div>
         </div>
     </div>
