--- a/emsidi/src/main/resources/templates/add-pegawai.html
+++ b/emsidi/src/main/resources/templates/add-pegawai.html
@@ -10,8 +10,13 @@
     <div class="card m-4 p-4">
         <div class="card-body">
             <div class="justify-content-center">
-                <h2 th:text="'Cabang Emsidi dengan nomor ' + ${noCabang} + ' berhasil menambahkan '+${namaPegawai}+ ' sebagai pegawai.'"></h2>
-                <a class="btn btn-primary" th:href="@{/cabang/view(noCabang=${noCabang})}">Kembali</a>
+                <div th:if = "${noCabang != null}">
+                    <h2 th:text="'Cabang Emsidi dengan nomor ' + ${noCabang} + ' berhasil menambahkan '+${namaPegawai}+ ' sebagai pegawai.'"></h2>
+                </div>
+                <div th:unless = "${noCabang != null}">
+                    <h2 th:text="'tidak berhasil menambahkan pegawai.'"></h2>
+                </div>
+                <a class="btn btn-primary" th:href="@{/}">Kembali</a>
             </div>
         </div>
     </div>
