--- a/emsidi/src/main/resources/templates/form-add-cabang.html
+++ b/emsidi/src/main/resources/templates/form-add-cabang.html
@@ -2,8 +2,10 @@
 <html lang="en" xmlns:th="http://thymeleaf.org">
 <head>
     <title>Emsidi</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous"></head>
+    <object th:include="fragments/fragment :: css" th:remove="tag"></object>
+    <object th:include="fragments/fragment :: js" th:remove="tag"></object>
 <body>
+<nav th:replace="fragments/fragment :: navbar('Add Cabang')"></nav>
 <div class="container">
     <div class="card m-4 p-4">
         <div class="card-body">
@@ -28,9 +30,32 @@
                     <br><br>
 
                     Waktu Tutup : <br>
-                    <input required class="form-control" type="time" name="waktuTutup" />
+                    <input class="form-control" type="time" name="waktuTutup" />
                     <br><br>
-
+                    <table class="table">
+                        <thead>
+                        <tr>
+                            <th>Nama Menu</th>
+                            <th><button class="btn btn-primary" name="add" value="add">Tambah Row</button></th>
+                        </tr>
+                        </thead>
+                        <tbody>
+                            <tr th:each="i : ${#numbers.sequence(1,jmlMenu)}">
+                                <td>
+                                    <div class="form-group">
+                                        <select class="form-control" 
+                                        th:field="*{listMenu}">
+                                            
+                                          <option th:each="menu, iterationStatus : ${listMenu}" th:text="${menu.namaMenu}" th:value="${menu.noMenu}">
+                                              
+                                          </option>
+                                        </select>
+                                      </div>
+                                </td>
+                                <td><button class="btn btn-danger" name="delete" value="delete">Hapus</button></td>
+                            </tr>
+                        </tbody>
+                    </table>
                     <button class="btn btn-primary" type="submit">Submit</button>
                     <a class="btn btn-primary" href="/">Cancel</a>
                 </form>
