--- a/emsidi/src/main/resources/templates/view-cabang.html
+++ b/emsidi/src/main/resources/templates/view-cabang.html
@@ -3,11 +3,12 @@
 
 <head>
     <title>Emsidi</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet"
-          integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
+    <object th:include="fragments/fragment :: css" th:remove="tag"></object>
+    <object th:include="fragments/fragment :: js" th:remove="tag"></object>
 </head>
 
 <body>
+<nav th:replace="fragments/fragment :: navbar('Cabang')"></nav>
 <div class="container">
     <div class="card m-4 p-4">
         <div class="card-body">
@@ -21,18 +22,85 @@
                 <p th:text="'Waktu Buka : ' + ${cabang.waktuBuka}"></p>
                 <p th:text="'Waktu Tutup : ' + ${cabang.waktuTutup}"></p>
                 <div class="col">
-                    <h6>Pegawai : </h6>
-                    <div th:each="pegawai : ${listPegawai}">
-                        <p th:text="'Nama : ' + ${pegawai.namaPegawai}"></p>
-                        <p th:if="${pegawai.jenisKelamin == 0}">Jenis Kelamin : Perempuan</p>
-                        <p th:if="${pegawai.jenisKelamin == 1}">Jenis Kelamin : Laki-laki</p>
-                        <hr>
-                        <a class="btn btn-primary" th:href="@{/pegawai/update/} + ${pegawai.noPegawai}">Update Pegawai</a>
-                        <a class="btn btn-primary" th:href="@{/pegawai/delete/} + ${pegawai.noPegawai}">Delete Pegawai</a>
+                    
+                    <div th:if="*{listPegawai.size() != 0}">
+                        <form th:action="@{/pegawai/delete}" th:object="${cabang}" method="POST">
+                            <h6>Pegawai : </h6>
+                            <table class="table">
+                                <thead>
+                                <tr>
+                                    <th>No</th>
+                                    <th>No Pegawai</th>
+                                    <th>Nama</th>
+                                    <th>jenis Kelamin</th>
+                                    <th></th>
+                                    <th>Hapus</th>
+                                </tr>    
+                                </thead>
+                                <tbody>
+                                <tr th:each="pegawai, iterationStatus : ${listPegawai}"
+                                    th:style="${iterationStatus.even} ? 'font-weight:bold;'">
+                                    <td th:text="${iterationStatus.count}"></td>
+                                    <td th:text="${pegawai.noPegawai}"></td>
+                                    <td th:text="${pegawai.namaPegawai}"></td>
+                                    <td th:if="${pegawai.jenisKelamin == 0}">Perempuan</td>
+                                    <td th:if="${pegawai.jenisKelamin == 1}">Laki-Laki</td>
+                                    <td>
+                                        <a class="btn btn-primary" th:href="@{/pegawai/update/} + ${pegawai.noPegawai}">Update</a>  
+                                    </td>
+                                    <td>
+                                        <input class="form-check-input" type="checkbox"
+                                                th:field="*{listPegawai}" th:value="${pegawai.noPegawai}"
+                                                id="flexCheckDefault">
+                                                <input type="hidden" th:field="*{noCabang}">
+                                                <input type="hidden" th:field="*{waktuBuka}">
+                                                <input type="hidden" th:field="*{waktuTutup}">
+                                    </td>
+                                </tr>
+                                </tbody>
+                            </table>
+                            <input type="submit" value="Delete yang dipilih" class="btn btn-danger">
+                        </form>
                     </div>
-                </div>
-                <br>
+                    <div th:unless="*{listPegawai.size != 0}">
+                        <h2 th:text="'Tidak ada pegawai'"></h2>
+                    </div>
+                    <br>
                 <a class="btn btn-primary" th:href="@{/pegawai/add/} + ${cabang.noCabang}">Tambah Pegawai</a>
+                    <div th:if="*{listMenu.size() != 0}">
+                        <br>
+                        <h2>Daftar Menu</h2>
+                        <br>
+                        <table class="table">
+                            <thead>
+                            <tr>
+                                <th>No</th>
+                                <th>Nomor Menu</th>
+                                <th>Nama Cabang</th>
+                                <th>Deskripsi Menu</th>
+                                <th>Sedang Tersedia</th>
+                            </tr>
+                            </thead>
+                            <tbody>
+                            <tr th:each="menu, iterationStatus : ${listMenu}">
+                                <td th:text="${iterationStatus.count}"></td>
+                                <td th:text="${menu.noMenu}"></td>
+                                <td th:text="${menu.namaMenu}"></td>
+                                <td th:text="${menu.deskripsiMenu}"></td>
+                                <td>
+                                    <p th:if="${menu.isAvailable == true}" th:text="'YA'"></p>
+                                    <p th:if="${menu.isAvailable == false}" th:text="'TIDAK'"></p>
+                                </td>
+                            </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                    <div th:unless="*{listMenu.size() != 0}">
+                        <h2 th:text="'Tidak ada menu'"></h2>
+                    </div>
+                    
+                </div>
+                
             </div>
         </div>
     </div>
