--- a/emsidi/src/main/resources/templates/home.html
+++ b/emsidi/src/main/resources/templates/home.html
@@ -40,7 +40,7 @@
         </div>
         
 
-        <div sec:authorize access="hasAuthority('Manajer')">
+        <div sec:authorize="hasAuthority('Manajer')">
             This content is only shown to administrators.
         </div>
 
