--- a/emsidi/src/main/resources/templates/home.html
+++ b/emsidi/src/main/resources/templates/home.html
@@ -26,7 +26,7 @@
         </div>
         <div class="my-3 d-flex justify-content-center">
             <a th:href="@{/menu/viewall}" class="mx-2 btn btn-dark">Lihat Semua Menu</a>
-            <a th:href="@{/menu/add}" class="mx-2 btn btn-outline-dark" sec:authorize="hasRole('Manajer')">Tambah Menu</a>
+            <a th:href="@{/menu/add}" class="mx-2 btn btn-outline-dark" sec:authorize="hasAuthority('Manajer')">Tambah Menu</a>
         </div>
         
         <div class="my-3 d-flex justify-content-center">
@@ -40,7 +40,7 @@
         </div>
         
 
-        <div sec:authorize="hasRole('Manajer')">
+        <div sec:authorize="hasAuthority('Admin')">
             This content is only shown to administrators.
         </div>
 
