--- a/emsidi/src/main/resources/templates/home.html
+++ b/emsidi/src/main/resources/templates/home.html
@@ -36,7 +36,7 @@
             <a th:href="@{/user/viewall}" class="mx-2 btn btn-dark">Lihat Semua User</a>
         </div>
         <div class="d-flex justify-content-center">
-            <a th:href="@{/user/update-pass/} + ${#httpServletRequest.remoteUser}" class="mx-2 btn btn-dark">Update Password User</a>
+            <a th:href="@{/user/update-pass/}" class="mx-2 btn btn-dark">Update Password User</a>
         </div>
         
 
