--- a/emsidi/src/main/resources/templates/form-update-user-pass.html
+++ b/emsidi/src/main/resources/templates/form-update-user-pass.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title> Home </title>
+    <title> Update Password </title>
     <object th:include="fragments/fragment :: css" th:remove="tag"></object>
     <object th:include="fragments/fragment :: js" th:remove="tag"></object>
 </head>
@@ -11,34 +11,33 @@
 
 <body>
 <nav th:replace="fragments/fragment :: navbar('Home')"></nav>
-
-<div class="container">
-    <div class="card m-4 p-4">
-        <div class="card-body">
-            <div class="justify-content-center">
-                <h2>Update Password</h2>
-                <br>
-                <form th:action="@{/user/update-pass}" th:object="${user}" method="POST">
-                    <input type="hidden" th:field="*{id}" />
-                    <input type="hidden" th:field="*{username}" />
-                    <input type="hidden" th:field="*{nama}" />
-                    <input type="hidden" th:field="*{email}" />
-                    <input type="hidden" th:field="*{role}" />
-                    
-                    <Label>Password Lama</Label>
-                    <input type="password" name="oldPass" class="form-control"/>
-                    
-                    <Label>Password Baru</Label>
-                    <input type="password" name="newPass" class="form-control"/>
-
-                    <Label>Konfirmasi Password Baru</Label>
-                    <input type="password" name="newPass2" class="form-control"/>
-                    
-                    <br>
-                    
-                    <button type="submit" class="btn btn-primary">Submit</button>
-                    <a class="btn btn-link" href="/">Home</a>
-                </form>
+<div class="container-fluid">
+    <div class="alert" th:if=${pesanError}>
+        <div th:text="${pesanError}" class="alert alert-danger" onclick="this.parentElement.style.display='none';"></div>
+    </div>
+    <div class="row" style="justify-content: center; text-align: center; margin: auto; padding: 2rem">
+        <div class="col-md-6">
+            <div class="card">
+                <div class="card-header">Ubah Password</div>
+                <div class="card-body">
+                    <form th:action="@{/user/ubahPassword}" method="POST">
+                        <div class="form-row">
+                            <label>Password Lama</label>
+                            <input type="password" id="passwordLama" name="passwordLama" class="form-control"/>
+                        </div>
+                        <div class="form-row">
+                            <label>Password Baru</label>
+                            <input type="password" id="passwordBaru" name="passwordBaru" class="form-control"/>
+                        </div>
+                        <div class="form-row">
+                            <label>Konfirmasi Password Baru</label>
+                            <input type="password" id="konfirmasiPassword" name="konfirmasiPassword" class="form-control"/>
+                        </div>
+                        <div style="margin-top: 2rem">
+                            <button type="submit" class="btn btn-primary">Submit</button>
+                            <a th:href="@{/}" class="btn btn-outline-primary">Kembali</a>
+                        </div>
+                    </form>
                 </div>
             </div>
         </div>
